# aurion-core

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
.circleci/: config.yml
AurionCore/: CMakeLists.txt
AurionCore/macros/: AurionExport.h
AurionCore/modules/Application/: Aurion.Application.ixx
AurionCore/modules/Events/: Event.ixx  EventBus.ixx  IEventDispatcher.ixx  IEventListener.ixx
AurionCore/modules/Input/: InputControl.ixx  InputDevice.ixx  InputEvent.ixx  InputState.ixx
AurionCore/modules/Logging/: ConsoleLogger.ixx  ILogger.ixx  LogEvents.ixx
AurionCore/modules/Memory/: IMemoryAllocator.ixx
AurionCore/modules/Memory/Allocators/: LinearAllocator.ixx  PoolAllocator.ixx  StackAllocator.ixx
AurionCore/modules/Platform/GLFW/: GLFWDriver.ixx  GLFW_Window.ixx
AurionCore/modules/Types/: Aurion.Types.ixx  MathTypes.ixx  PrimitiveTypes.ixx
AurionCore/modules/Window/: Aurion.Window.ixx  IWindow.ixx  IWindowDriver.ixx  WindowEvent.ixx
AurionCore/src/Application/: Application.cpp
AurionCore/src/Events/: Event.cpp  EventBus.cpp
AurionCore/src/Input/: InputControl.cpp  InputDevice.cpp  InputState.cpp
AurionCore/src/Logging/: ConsoleLogger.cpp
AurionCore/src/Memory/: LinearAllocator.cpp  PoolAllocator.cpp  StackAllocator.cpp
AurionCore/src/Platform/GLFW/: GLFWDriver.cpp  GLFW_Window.cpp
AurionCore/src/Types/: mat2.cpp  mat3.cpp  mat4.cpp  quat.cpp  vec2.cpp  vec3.cpp  vec4.cpp
AurionCore/src/Window/: Window.cpp
Sandbox/src/: main.cpp
core/macros/: AurionLog.h
core/modules/Application/: Aurion.Application.ixx
core/modules/Events/: Aurion.Events.ixx  Event.ixx  EventBus.ixx  IEventDispatcher.ixx  IEventListener.ixx
core/modules/File System/: Aurion.FileSystem.ixx  FSDirectoryHandle.ixx  FSEvents.ixx  FSFileData.ixx  FSFileHandle.ixx  FSHandle.ixx  FSInfo.ixx  IFileSystem.ixx  IVirtualFileSystem.ixx
core/modules/Input/: Aurion.Input.ixx  IInputControl.ixx  InputContext.ixx  InputControl.ixx  InputDevice.ixx  InputEvent.ixx  InputLayout.ixx  InputState.ixx
core/modules/Logging/: Aurion.Log.ixx  ConsoleLogger.ixx  FileLogger.ixx  ILogger.ixx  LogEvents.ixx
core/modules/Memory/: Aurion.Memory.ixx  IMemoryAllocator.ixx
core/modules/Memory/Allocators/: LinearAllocator.ixx  PoolAllocator.ixx  StackAllocator.ixx
core/modules/Platform/GLFW/: Aurion.GLFW.ixx  GLFWDriver.ixx  GLFW_Window.ixx
core/modules/Platform/Windows/: WindowsFileSystem.ixx
core/modules/Plugin/: IPlugin.ixx  IPluginContext.ixx  IPluginLoader.ixx
core/modules/Types/: MathTypes.ixx  PrimitiveTypes.ixx
core/modules/Virtual File System/: Aurion.VFS.ixx
core/modules/Window/: Aurion.Window.ixx  IWindow.ixx  IWindowDriver.ixx  WindowEvent.ixx
core/src/Application/: Application.cpp
core/src/Events/: Event.cpp  EventBus.cpp
core/src/File System/: FSDirectoryHandle.cpp  FSFileHandle.cpp
core/src/Input/: InputControl.cpp  InputDevice.cpp  InputEventDispatcher.cpp  InputEventListener.cpp  InputState.cpp
core/src/Logging/: ConsoleLogger.cpp  FileLogger.cpp
core/src/Memory/: LinearAllocator.cpp  PoolAllocator.cpp  StackAllocator.cpp
core/src/Platform/GLFW/: GLFWDriver.cpp  (+1 more)
core/src/Plugin/: PluginLoader.cpp
core/src/Types/: mat3.cpp  mat4.cpp  vec2.cpp  vec4.cpp
core/src/Window/: Window.cpp
modules/Application/: Aurion.Application.ixx
modules/Plugin/: Aurion.Plugin.ixx  IPlugin.ixx  IPluginContext.ixx  IPluginLoader.ixx
modules/Plugin/Loaders/: IPluginContext.ixx  WindowsPluginLoader.ixx
modules/Window/: Aurion.Window.ixx  IWindow.ixx  IWindowContext.ixx  IWindowDriver.ixx
plugins/Window/core/: WindowPlugin.ixx
plugins/Window/modules/: Aurion.WindowPlugin.ixx
plugins/Window/src/: Aurion.WindowPlugin.cpp
scripts/Windows/: generate_projects.bat
src/Plugin/Loaders/: WindowsPluginLoader.cpp
(+18 files in other folders)
